# llm-proxy-langchain

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
docs/plans/: 2026-01-23-llm-proxy-design.md  2026-01-23-llm-proxy-implementation.md  2026-01-27-tool-call-fixes-design.md
src/llm_proxy/: __init__.py  auth.py  config.py  main.py
src/llm_proxy/backends/: __init__.py  factory.py  router.py
src/llm_proxy/models/: __init__.py  anthropic.py  config.py
src/llm_proxy/routes/: messages.py
src/llm_proxy/translation/: __init__.py  request.py  response.py  streaming.py
tests/: test_anthropic_models.py  test_app.py  test_auth.py  test_backends.py  test_config_loader.py  test_config_models.py  test_integration.py  test_messages_endpoint.py  test_request_translation.py  test_response_translation.py  test_streaming.py
